--- a/index.html
+++ b/index.html
@@ -5,9 +5,31 @@
         <title>Run Buddy</title>
     </head>
     <body>
+
         <!-- navigation -->
         <header>
-            <h1>RUN BUDDY</h1>
+            <h1>
+                <a href="/">RUN BUDDY</a>
+            </h1>
+            <nav>
+                <!-- Unordered list element -->
+                <ul>
+                    <!-- List item element -->
+                    <li>
+                        <!-- Anchor element -->
+                        <a href="#what-we-do">What We Do</a>
+                    </li>
+                    <li>
+                        <a href="#what-you-do">What You</a>
+                    </li>
+                    <li>
+                        <a href="#your-trainers">Your Trainers</a>
+                    </li>
+                    <li>
+                        <a href="#reach-out">Reach Out</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
 
         <!-- hero/jumbotron -->
@@ -16,7 +38,7 @@
         
         <!-- "what we do" section -->
         <section>
-            <h2>What We Do</h2>
+            <h2 >What We Do</h2>
         </section>
 
         <!-- "what you do" section --> 
