--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
+        <meta charset="UTF-8"/>
         <title>Run Buddy</title>
-        <link rel="stylesheet" href="run-buddy.css"/>
+        <link rel="stylesheet" href="./assets/css/run-buddy.css"/>
     </head>
     <body>
 
         <!-- navigation -->
         <header>
+
             <h1>
                 <a href="/">RUN BUDDY</a>
             </h1>
+
             <nav>
+
                 <!-- Unordered list element -->
                 <ul>
+
                     <!-- List item element -->
                     <li>
                         <!-- Anchor element -->
@@ -29,8 +33,11 @@
                     <li>
                         <a href="#reach-out">Reach Out</a>
                     </li>
+                    
                 </ul>
+
             </nav>
+
         </header>
 
         <!-- hero/jumbotron -->
@@ -39,7 +46,7 @@
         
         <!-- "what we do" section -->
         <section>
-            <h2 id="#what-we-do" >What We Do</h2>
+            <h2 id="#what-we-do">What We Do</h2>
         </section>
 
         <!-- "what you do" section --> 
