--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
                             I acknowledge that I am at least 18 years of age
                             <input type="radio" name="age-confirm" id="18-yes"/>
                         </label>
-                    <p>
+                    </p>
+                    <button type="submit">
+                        Get running!
+                    </button>
                 </form>
             </div>
         </section>
@@ -88,7 +91,6 @@
         <!-- footer -->
         <footer>
             <h2>❤️ Made with love by Run Buddy.</h2>
-
             <div>
                 <a href="#">Read Our Privacy Policy</a><br />
                 &copy; 2019 Run Buddy, Inc.
