--- a/index.html
+++ b/index.html
@@ -157,6 +157,31 @@
         <!-- "reach out" section -->
         <section id="reach-out">
             <h2>Reach Out</h2>
+            <div class="contact-info">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3512.8267589357856!2d-81.23647408492474!3d28.30357158254884!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88dd8bf40a24b037%3A0x583fa2b84c8ced55!2s5145%20Ravena%20Ave%20E%2C%20St%20Cloud%2C%20FL%2034771!5e0!3m2!1sen!2sus!4v1645328635072!5m2!1sen!2sus" 
+                width="400" 
+                height="400" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy">
+                </iframe>
+            </div>
+            <div>
+                <h3>Run Buddy</h3>
+                <p>
+                    Any questions or concerns before signing up?
+                    <br />
+                    Let us know and we'll be happy to talk to you!
+                </p>
+                <address>
+                    55 Main Street <br />
+                    Some Town, Ca <br />
+                    12345<br />
+                    P: 555.RUN.BUDZ (555.786.2839)<br/>
+                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                </address>
+            </div>
+
         </section>
 
         
