--- a/index.html
+++ b/index.html
@@ -179,17 +179,17 @@
               </address>
             </div>
           </div>  
-        </section>
+      </section>
 
         
-        <!-- footer -->
-        <footer>
-            <h2>❤️ Made with love by Run Buddy.</h2>
-            <div>
-                <a href="#">Read Our Privacy Policy</a><br />
-                &copy; 2019 Run Buddy, Inc.
-            </div>
-        </footer>
+    <!-- footer -->
+    <footer>
+      <h2>❤️ Made with love by Run Buddy.</h2>
+      <div>
+        <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
+        &copy; 2019 Run Buddy, Inc.
+      </div>
+    </footer>
         
 
   </body>
