--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
 
         <!-- Test commit  -->
-
+<!-- test commit -->
         <!-- navigation -->
         <header>
             <h1>
