add flexbox to the hero

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   
-<head>
-  <meta charset="UTF-8"/>
-  <title>Run Buddy</title>
-  <link rel="stylesheet" href="./assets/css/run-buddy.css"/>
-</head>
-    <body>
+  <head>
+    <meta charset="UTF-8"/>
+    <title>Run Buddy</title>
+    <link rel="stylesheet" href="./assets/css/run-buddy.css"/>
+  </head>
+
+  <body>
         <!-- navigation -->
         <header>
             <h1>
@@ -36,7 +37,7 @@
 
         <!-- hero/jumbotron -->
         <section class="hero">
-          <div class="hero-octa">
+          <div class="hero-cta">
             <h2>
               Start Building Habits.
             </h2>
@@ -210,7 +211,7 @@
         &copy; 2019 Run Buddy, Inc.
       </div>
     </footer>
-        
+
 
   </body>
 </html>
