added flexbox to section title

--- a/index.html
+++ b/index.html
@@ -80,21 +80,29 @@
 
         <!-- "what we do" section -->
         <section id="what-we-do" class="intro">
-            <h2 class="section-title primary-border">What We Do</h2>
+          <div class="flex-row">
+            <h2 class="section-title primary-border">
+              What We Do
+            </h2>
+          </div>
             <p>
-                butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-              </p>
+              butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+            </p>
         </section>
 
         <!-- "what you do" section --> 
         <section id="what-you-do" class="steps">
-            <h2 class="section-title secondary-border">What You Do</h2>
+          <div class="flex-row">
+            <h2 class="section-title secondary-border">
+            What You Do
+            </h2>
+          </div>
 
-            <div>
-                <img src="./assets/images/step-1.svg" alt="" />
-                <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
-                <p>You're already here, so why not?</p>
-            </div>
+          <div>
+            <img src="./assets/images/step-1.svg" alt="" />
+            <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
+            <p>You're already here, so why not?</p>
+          </div>
 
             <div>
                 <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
@@ -117,10 +125,11 @@
         
         <!-- "meet the trainers" section -->
         <section id="your-trainers" class="trainers">
-            
+          <div class="flex-row">
             <h2 class="section-title primary-border">
-                Meet The Trainers
+              Meet The Trainers
             </h2>
+          </div>
 
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
@@ -163,7 +172,11 @@
 
         <!-- "reach out" section -->
         <section id="reach-out" class="contact">
-          <h2 class="section-title secondary-border">Reach Out</h2>
+          <div class="flex-row">
+            <h2 class="section-title secondary-border">
+              Reach Out
+            </h2>
+          </div>
           <div class="contact-info">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3512.8267589357856!2d-81.23647408492474!3d28.30357158254884!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88dd8bf40a24b037%3A0x583fa2b84c8ced55!2s5145%20Ravena%20Ave%20E%2C%20St%20Cloud%2C%20FL%2034771!5e0!3m2!1sen!2sus!4v1645328635072!5m2!1sen!2sus"
               style="border:0;" 
