--- a/index.html
+++ b/index.html
@@ -98,16 +98,29 @@
             </h2>
           </div>
 
-          <div>
-            <img src="./assets/images/step-1.svg" alt="" />
-            <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
-            <p>You're already here, so why not?</p>
+          <div class="step">
+            <h3>Step 1.</h3>
+            <div class="step-info">
+              <div class="step-img">
+                <img src="./assets/images/step-1.svg" alt="" />
+              </div>
+              <div class="step-text">
+                <h4>Fiil Out The Form Above</h4>
+                <p>You're already here, so why not?</p>
+              </div>
+            </div>
           </div>
 
-            <div>
+            <div class="step">
                 <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
-                <img src="./assets/images/step-2.svg" alt="" />
-                <p>Are you here to build muscle, lose weight, or just feel good?</p>
+                <div class="step-info">
+                  <div class="step-img">
+                    <img src="./assets/images/step-2.svg" alt="" />
+                  </div>
+                  <div class="step-txt">
+                    <p>Are you here to build muscle, lose weight, or just feel good?</p>
+                  </div>
+                </div>
             </div>
             
             <div>
