--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
   
   <head>
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Run Buddy</title>
     <link rel="stylesheet" href="./assets/css/run-buddy.css"/>
   </head>
 
   <body>
-        <!-- navigation -->
-        <header>
-            <h1>
-                <a href="./index.html">RUN BUDDY</a>
-            </h1>
+    <!-- navigation -->
+    <header>
+      <h1>
+        <a href="./index.html">RUN BUDDY</a>
+      </h1>
 
             <nav>
                 <!-- Unordered list element -->
@@ -33,7 +34,7 @@
                     </li>
                 </ul>
             </nav>
-        </header>
+    </header>
 
         <!-- hero/jumbotron -->
         <section class="hero">
