--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Run Buddy</title>
     <link rel="stylesheet" href="./assets/css/run-buddy.css"/>
   </head>
-
   <body>
     <!-- navigation -->
     <header>
@@ -15,25 +14,25 @@
         <a href="./index.html">RUN BUDDY</a>
       </h1>
 
-            <nav>
-                <!-- Unordered list element -->
-                <ul>
-                    <!-- List item element -->
-                    <li>
-                        <!-- Anchor element -->
-                        <a href="#what-we-do">What We Do</a>
-                    </li>
-                    <li>
-                        <a href="#what-you-do">What You Do</a>
-                    </li>
-                    <li>
-                        <a href="#your-trainers">Your Trainers</a>
-                    </li>
-                    <li>
-                        <a href="#reach-out">Reach Out</a>
-                    </li>
-                </ul>
-            </nav>
+      <nav>
+        <!-- Unordered list element -->
+        <ul>
+          <!-- List item element -->
+          <li>
+            <!-- Anchor element -->
+            <a href="#what-we-do">What We Do</a>
+          </li>
+          <li>
+            <a href="#what-you-do">What You Do</a>
+          </li>
+          <li>
+            <a href="#your-trainers">Your Trainers</a>
+          </li>
+          <li>
+            <a href="#reach-out">Reach Out</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
         <!-- hero/jumbotron -->
@@ -128,18 +127,18 @@
             </div>
           </div>
             
-            <div class="step">
-                <h3>Step 3.</h3>
-                <div class="step-info">
-                  <div class="step-img">
-                    <img src="./assets/images/step-3.svg" alt="" />
-                  </div>
-                  <div class="step-text">
-                    <h4>Get Running.</h4>
-                    <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
-                  </div>
-                </div>
+          <div class="step">
+            <h3>Step 3.</h3>
+            <div class="step-info">
+              <div class="step-img">
+                <img src="./assets/images/step-3.svg" alt="" />
               </div>
+              <div class="step-text">
+                <h4>Get Running.</h4>
+                <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+              </div>
+            </div>
+          </div>
             
             <div class="step">
                 <h3>Step 4.</h3>
@@ -224,7 +223,7 @@
                 <label for="contact-name">Your Name</label>
                 <input type="text" id="contact-name" placeholder="Your Name" />
 
-                <label for="contat-name"></label>Your Name</label>
+                <label for="contact-message"></label>Your Name</label>
                 <textarea id="contact-message" placeholder="Message"></textarea>
 
                 <button type="submit">Submit</button>
